證券交易法 2000.6.30

--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -2,23 +2,25 @@
 
 * 2 有價證券之募集、發行、買賣，其管理、監督依本法之規定，本法未規定者，適用公司法及其他有關法律之規定。
 
-* 3 本法所稱主管機關，為財政部證券管理委員會。
+* 3 本法所稱主管機關，為財政部證券暨期貨管理委員會。
 
-> 釋：配合證券管理委員會改隸，將現行第三條規定之「經濟部」修正為「財政部」。
+> 釋：鑑於財政部證券暨期貨管理委員會組織條例之更名，及參照期貨交易法第四條關於主管機關之規定，將證券交易主管機關更為財政部證券暨期貨管理委員會，以求一致。
 
 * 4 本法所稱公司，謂依公司法組織之股份有限公司。
 
 * 5 本法所稱發行人，謂募集及發行有價證券之公司，或募集有價證券之發起人。
 
-* 6 本法所稱有價證券，謂政府債券及公開募集、發行之公司股票、公司債券及經財政部核定之其他有價證券。新股認購權利證書、新股權利證書及前項各種有價證券之價款繳納憑證或表明其權利之證書，視為有價證券。
+* 6 本法所稱有價證券，謂政府債券、公司股票、公司債券及經財政部核定之其他有價證券。新股認購權利證書、新股權利證書及前項各種有價證券之價款繳納憑證，或表明其權利之證書，視為有價證券。前二項規定之有價證券，未印製表示其權利之實體有價證券者，亦視為有價證券。
 
-> 釋：一、現行第一項所定依本法公開募集、發行之公司股票、公司債券，始為本法之有價證券，易滋誤解不依本法亦可公開募集、發行該二有價證券之疑義，爰將第一項中之「依本法」三字刪除，並將本項後段「政府核准之其他有價證券」修正為「財政部核定之其他有價證券」，俾期明確。二、公開發行股票公司依公司法第二百四十條及第二百四十一條增資發行新股，因係按原有股東配發新股，實務上得在增資股票上市買賣前，先行印製新股權利證書，於報經主管機關核准上市買賣，又表彰第一項各種有價證券之權利證書，參照外國立法例，均列為有價證券之範疇，爰增列「新股權利證書」，及其他有價證券之表彰權利證書，俾資周全。
+> 釋：一、配合主管機關改隸，爰修正第一項。二、為配合有價證券無實體發行制度之建立，及為避免無實體發行以帳簿劃撥登錄，因未印製實體有價證券，是否屬有價證券之爭議，爰將有價證券無實體發行以帳簿劃撥登錄，未印製實體有價證券者，亦規定視為有價證券，以杜爭議，爰增訂第三項。
 
 * 7 本法所稱募集，謂發起人於公司成立前或發行公司於發行前，對非特定人公開招募股份或公司債之行為。
 
 > 釋：依公司法第一百五十六條第六項：「同次發行之股份，其發行條件相同者，價格應歸一律。」並未限制不得以「非同一之條件」發行，本條現行規定限制「以同一之條件」，則發行人如以「非同一之條件」發行，即非屬本法之募集，而可規避本法之管理。該要件之列入，顯屬多餘且不妥，爰予刪除。
 
-* 8 本法所稱發行，謂發行人於募集後製作並交付有價證券之行為。
+* 8 本法所稱發行，謂發行人於募集後製作並交付，或以帳簿劃撥方式交付有價證券之行為。前項以帳簿劃撥方式交付有價證券之發行，得不印製實體有價證券。
+
+> 釋：有價證券募集後之發行若能採取帳簿劃撥方式直接進入集中保管系統，不但可提高集中保管之「集中度」有助於提高日後帳簿劃撥制度之效率，減省印製並交付實體有價證券之勞務與費用，對於投資人可省去領取、保管等手續並避免遺失、竊盜或滅失等風險。爰修正第一項，增訂以「帳簿劃撥交付有價證券」之「發行」有價證券型。惟慮及民商法傳統理論均以有價證券係「實體發行」為前提，爰增訂第二項使之更臻明確，並避免理論之爭。
 
 * 9 （刪除）
 
@@ -34,7 +36,9 @@
 
 * 14 本法所稱財務報告，謂發行人及證券商、證券交易所依照法令規定，應定期編送主管機關之財務報告。前項財務報告之編製準則，由主管機關以命令定之。
 
-* 15 依本法經營之證券業務，其種類如左：一、有價證券之承銷。二、有價證券之自行買賣。三、有價證券買賣之行紀或居間。
+* 15 依本法經營之證券業務，其種類如左：一、有價證券之承銷及其他經主管機關核准之相關業務。二、有價證券之自行買賣及其他經主管機關核准之相關業務。三、有價證券買賣之行紀、居間、代理及其他經主管機關核准之相關業務。
+
+> 釋：世界各國證券商得經營業務之項目及範圍，因地區國家或時間之關係而有所不同，為擴大我國證券商得經營業務之範圍，及因應我國證券市場自由化、國際化之需要，有必要概括規定相關業務之項目，以避免掛一漏萬，爰於各款增訂概括規定。
 
 * 16 經營前條各款業務之一者為證券商，並依左列各款定其種類：一、經營前條第一款規定之業務者，為證券承銷商。二、經營前條第二款規定之業務者，為證券自營商。三、經營前條第三款規定之業務者，為證券經紀商。
 
@@ -50,9 +54,13 @@
 
 > 釋：一、第一項不修正。二、第二項新增。本條現行所列準用條文，僅限於對事業本身之管理，而對事業所屬相當於第五十三條、第五十四條及第五十六條所定人員，其資格條件與管理尚付闕如，爰增訂第二項，明定第五十三條、第五十四條及第五十六條之規定，於前條事業之人員準用之。
 
-* 18.2 證券投資信託事業募集之證券投資信託基金，與證券投資信託事業及基金保管機構之自有財產，應分別獨立。證券投資信託事業及基金保管機構就其自有財產所負債務，其債權人不得對於基金資產請求扣押或行使其他權利。證券投資信託基金管理辦法，由財政部定之。
+* 18.2 證券投資信託事業募集之證券投資信託基金，與證券投資信託事業及基金保管機構之自有財產，應分別獨立。證券投資信託事業及基金保管機構就其自有財產所負債務，其債權人不得對於基金資產為任何之請求或行使其他權利。證券投資信託基金管理辦法，由財政部定之。
 
-> 釋：一、本條新增。二、證券投資信託事業所募集之證券投資信託基金，乃為該基金全體受益人之利益而存在，依一般信託法則，信託財產應屬於受益人，並非證券投資信託事業機構或基金保管機構所有。故為確保該項基金之獨立及排除證券投資信託事業或基金保管機構之債權人對之請求扣押或行使其他權利，爰參照日本（信託法第十五條、十六條、十七條）、韓國（證券投資信託事業法第廿六條、廿九條）等國立法例，增訂本條第一項。三、投資信託基金之管理，關係投資人權益頗大，但管理之事項頗為繁瑣，無法在本法中一一訂明，爰於第二項授權由財政部訂定管理辦法，以應實際需要。
+> 釋：基金是獨立於公司的資產之外，所以公司的債權人應不得對基金請求扣押或主張任何權益。爰修正第一項為：「．．．．．．其債權人不得對基金資產為任何之請求或行使其他權益。」
+
+* 18.3 證券投資顧問事業或證券投資信託事業接受客戶全權委託投資之資金，與證券投資顧問事業或證券投資信託事業及保管機構之自有財產，應分別獨立。證券投資顧問事業或證券投資信託事業及保管機構對其自有財產所負債務，其債權人不得對客戶委託之資金及以該資金購入之資產，為任何之請求或行使其他權利。證券投資顧問事業或證券投資信託事業經營接受客戶全權委託投資業務之管理辦法及其營業保證金，由財政部定之。
+
+> 釋：一、本條新增。二、規定證券投資顧問事業或證券投資信託事業接受客戶全權委託投資之資金具有獨立性，以保障該資金安全。三、授權訂定經營接受客戶全權委託投資業務之管理辦法，以確保該業務之正常運作。
 
 * 19 凡依本法所訂立之契約，均應以書面為之。
 
@@ -104,9 +112,21 @@
 
 > 釋：一、配合本法第十七條條文之修正，酌作文字修正。二、第二項未修正。
 
-* 28.1 股票未在證券交易所上市或未於證券商營業處所買賣之公開發行股票公司，其股權分散未達主管機關依第二十二條之一第一項所定標準者，於現金發行新股時，除主管機關認為無須或不適宜對外公開發行者外，應提撥發行新股總額之一定比率，對外公開發行，不受公司法第二百六十七條第一項關於原股東儘先分認規定之限制。股票已在證券交易所上市或於證券商營業處所買賣之公開發行股票公司，於現金發行新股時，主管機關得規定提撥發行新股總額之一定比率，以時價向外公開發行，不受公司法第二百六十七條第一項關於原股東儘先分認規定之限制。前二項提撥比率定為發行新股總額之百分之十。但股東會另有較高比率之決議者，從其決議。依第一項或第二項規定提撥向外公開發行時，同次發行由公司員、工承購或原有股東認購之價格，應與向外公開發行之價格相同。
+* 28.1 股票未在證券交易所上市或未於證券商營業處所買賣之公開發行股票公司，其股權分散未達主管機關依第二十二條之一第一項所定標準者，於現金發行新股時，除主管機關認為無須或不適宜對外公開發行者外，應提撥發行新股總額之一定比率，對外公開發行，不受公司法第二百六十七條第三項關於原股東儘先分認規定之限制。股票已在證券交易所上市或於證券商營業處所買賣之公開發行股票公司，於現金發行新股時，主管機關得規定提撥發行新股總額之一定比率，以時價向外公開發行，不受公司法第二百六十七條第三項關於原股東儘先分認規定之限制。前二項提撥比率定為發行新股總額之百分之十。但股東會另有較高比率之決議者，從其決議。依第一項或第二項規定提撥向外公開發行時，同次發行由公司員工承購或原有股東認購之價格，應與向外公開發行之價格相同。
 
-> 釋：一、本條新增。二、公開發行公司透過市場吸收資金，以促使資本證券化，證券大眾化，為建立證券市場主要目的之一。惟因公司法第二百六十七條第一項規定，公司於發行新股時，應由原股東優先分認，致有左列缺陷：（一）公司董、監事如認購增資股資力不足時，不無影響公司辦理增資在市場吸收資金意願。（二）如仍由原股東優先分認，股權無法更加分散予社會大眾，與證券大眾化目標不符。（三）對績優公司、因顧及股東資力及維護股東權益，未便以超過面額發行新股，增加公司營運資金，減低資金成本。三、為促進資本證券化，證券大眾化，及便於績優之公開發行股票公司，發行新股時可溢價提撥對外公開招募，廣為吸收資金，增加公司營運資金，減低資金成本，爰增訂本條。
+> 釋：公司發行新股，原股東有優先認購權，係於公司法第二百六十七條第三項規定，故修正原條文第一、二項中「第一項」等字為「第三項」。
+
+* 28.2 股票已在證券交易所上市或於證券商營業處所買賣之公司，有左列情事之一者，得經董事會三分之二以上董事之出席及出席董事超過二分之一同意，於有價證券集中交易市場或證券商營業處所或依第四十三條之一第二項規定買回其股份，不受公司法第一百六十七條第一項規定之限制：一、轉讓股份予員工。二、配合附認股權公司債、附認股權特別股、可轉換公司債、可轉換特別股或認股權憑證之發行，作為股權轉換之用。三、為維護公司信用及股東權益所必要而買回，並辦理銷除股份者。前項公司買回股份之數量比例，不得超過該公司已發行股份總數百分之十；收買股份之總金額，不得逾保留盈餘加發行股份溢價及已實現之資本公積之金額。公司依第一項規定買回其股份之程序、價格、數量、方式、轉讓方法、及應申報公告事項，由主管機關以命令定之。公司依第一項規定買回之股份，除第三款部分應於買回之日起六個月內辦理變更登記外，應於買回之日起三年內將其轉讓；逾期未轉讓者，視為公司未發行股份，並應辦理變更登記。公司依第一項規定買回之股份，不得質押；於未轉讓前，不得享有股東權利。公司於有價證券集中交易市場或證券商營業處所買回其股份者，該公司其依公司法第三百六十九條之一規定之關係企業或董事、監察人、經理人之本人及其配偶、未成年子女或利用他人名義所持有之股份，於該公司買回之期間內不得賣出。第一項董事會之決議及執行情形，應於最近一次之股東會報告；其因故未買回股份者亦同。
+
+> 釋：一、本條新增。二、第一項參考美、英、日、德等國立法例，明定股票上市、上櫃之公司得經董事會決議買回其股份之情事，其股份之買回不受公司法第一百六十七條第一項規定之限制。三、為避免公司買回自己股份之數量及所運用之資金，漫無限制將損及債權人與股東權益，爰增訂第二項。四、為防範公司買回自己股份時發生內線交易或操縱股價，基於管理之需要，增訂第三項。五、公司買回之股份除其為轉讓予員工部分，規定半年內必須處理外，依其他目的買回之部分，則可由公司視市場狀況出售，惟仍不宜無限期持有，故訂定庫藏期限最高為三年，訂定第四項。六、第五項明定公司買回之股份，於未轉讓前不得享有股東權利。七、為避免公司之關係企業或董事、監察人及經理人等藉機於公司買回自己股份之期間賣出所持有該公司之股份，爰訂定第六項。八、於第七項明定董事會決議買回股份及執行情形應提股東會報告。
+
+* 28.3 募集、發行認股權憑證、附認股權特別股或附認股權公司債之公開發行公司，於認股權人依公司所定認股辦法行使認股權時，有核給股份之義務，不受公司法第一百五十六條第六項價格應歸一律與第二百六十七條第一項、第二項及第三項員工、原股東儘先分認規定之限制。前項依公司所定認股辦法之可認購股份數額，應先於公司章程中載明，不受公司法第二百七十八條第一項及第二項規定之限制。
+
+> 釋：一、本條新增。二、為促使證券商品種類多樣化，擴大證券市場規模，使公司有較多籌措資金管道，及投資人有更多之投資工具，爰於第一項明定公開發行公司可募集、發行認股權憑證、附認股權特別股、附認股權公司債等證券商品。三、為順利推動此類商品，提高公司發行意願及投資人投資興趣，宜採可隨時認購之方式，且為免窒礙難行，參酌公司法中有關可轉換股份數額之規定，爰增訂第二項。
+
+* 28.4 已依本法發行股票之公司，募集與發行有擔保公司債、轉換公司債或附認股權公司債，其發行總額，除經主管機關徵詢目的事業中央主管機關同意者外，不得逾全部資產減去全部負債餘額之百分之二百，不受公司法第二百四十七條規定之限制。
+
+> 釋：一、本條新增。二、為擴大債券市場規模，俾企業藉發行公司債籌措中長期資金，爰放寬有擔保公司債、轉換公司債及附認股權公司債之發行額度，為全部資產減去全部負債餘額之百分之二百，排除公司法第二百四十七條規定公司債總額之限制。三、為因應特殊行業（如電力公司）大量發行公司債之需要，增訂除外規定，經主管機關徵詢目的事業中央主管機關同意者，亦不受公司法第二百四十七條規定之限制。
 
 * 29 公司債之發行如由金融機構擔任保證人者，得視為有擔保之發行。
 
@@ -136,19 +156,23 @@
 
 * 38 主管機關為有價證券募集或發行之核准，因保護公益或投資人利益，對發行人、證券承銷商或其他關係人，得命令其提出參考或報告資料，並得直接檢查其有關書表、帳冊。有價證券發行後，主管機關得隨時命令發行人提出財務、業務報告或直接檢查財務、業務狀況。
 
+* 38.1 主管機關認為必要時，得隨時指定會計師、律師、工程師或其他專門職業或技術人員，檢查發行人、證券承銷商或其他關係人之財務、業務狀況及有關書表、帳冊，並向主管機關提出報告或表示意見，其費用由被檢查人負擔。
+
+> 釋：一、本條新增。二、為強化主管機關檢查之績效，賦予主管機關得隨時指定具備專業技術、知識及經驗之專業人員，更深入檢查財務、業務狀況及有關書表、帳冊，以保障投資安全。
+
 * 39 主管機關於審查發行人所申報之財務報告、其他參考或報告資料時，或於檢查其財務、業務狀況時，發現發行人有不符合法令規定之事項，除得以命令糾正外，並得依本法處罰。
 
 * 40 對於有價證券募集之核准，不得藉以作為證實申請事項或保證證券價值之宣傳。
 
-* 41 主管機關認為有必要時，對於已依本法發行有價證券之公司，得以命令規定其於分派盈餘時，除依法提出法定盈餘公積外，並應另提一定比率之特別盈餘公積。已依本法發行有價證券之公司申請以法定盈餘公積或資本公積撥充資本時，應先填補虧損，不適用公司法第二百三十九條第一項但書之規定；其以土地增值或資產重估增值之資本公積撥充資本者，應以其增值淨額之一定比率為限。
+* 41 主管機關認為有必要時，對於已依本法發行有價證券之公司，得以命令規定其於分派盈餘時，除依法提出法定盈餘公積外，並應另提一定比率之特別盈餘公積。已依本法發行有價證券之公司，申請以法定盈餘公積或資本公積撥充資本時，應先填補虧損；其以資本公積撥充資本者，應以其一定比率為限。
 
-> 釋：一、第一項未修正。二、第二項新增。依公司法第二百三十九條第一項規定暨經濟部（七十一、二、十五商０四三一五號函）解釋，公司以法定盈餘公積或資本公積撥充資本時，不受先彌補虧損之限制，玆為健全發行公司之資本結構及確保資本維持原則，爰增訂第二項前段。又發行公司以資產重估增值之資本公積轉撥資本，增發新股分配股東，如此項增值尚未實現，則其增值並無現金投入，對於公司營運亦無助益，而公積原屬股東權益，配股徒使股份膨脹，股價因除權而下降，從而影響每股盈餘之分配減少，致公司業績表達形成不良印象，歪曲證券市場之正常形象，爰增訂第二項後段。
+> 釋：一、基於證券交易法和公司法在適用上，本法原條文意義模糊，徒增困擾，故將第二項中「不適用公司法第二百三十九條第一項但書之規定」字串刪除。二、另第二項增列申請資本公積撥充資本及將原條文「以土地增值或資產重估增值之資本公積撥充資本者，應以其增值淨額之一定比率為限。」修正為「其以資本公積撥充資本者，應以其一定比率為限」。
 
 * 42 公司對於未依本法發行之股票，擬在證券交易所上市或於證券商營業處所買賣者，應先向主管機關申請補辦本法規定之有關發行審核程序。未依前項規定補辦發行審核程序之公司股票，不得為本法之買賣，或為買賣該種股票之公開徵求或居間。
 
-* 43 有價證券買賣之給付或交割，應以現款、現貨為之。但已上市之有價證券買賣，其交割期間及預繳買賣證據金數額，得由主管機關以命令定之。證券集中保管事業保管之有價證券，其買賣之交割，得以帳簿劃撥方式為之；其作業辦法，由主管機關定之。以證券集中保管事業保管之有價證券為設質之標的者，其設質之交付，得以帳簿劃撥方式為之，並不適用民法第九百零八條之規定。證券集中保管事業保管之股票，經證券集中保管事業將所保管股票號碼、股票所有人之本名或名稱、住所或居所及所持有股數通知該股票之發行公司時，視為已記載於公司股東名簿或已將股票交存公司，不適用公司法第一百六十五條第一項及第一百七十六條之規定。
+* 43 有價證券買賣之給付或交割，應以現款、現貨為之。但已上市之有價證券買賣，其交割期間及預繳買賣證據金數額，得由主管機關以命令定之。證券集中保管事業保管之有價證券，其買賣之交割，得以帳簿劃撥方式為之；其作業辦法，由主管機關定之。以證券集中保管事業保管之有價證券為設質標的者，其設質之交付，得以帳簿劃撥方式為之，並不適用民法第九百零八條之規定。證券集中保管事業以混合保管方式保管之有價證券，由所有人按其送存之種類、數量分別共有；領回時，並得以同種類、同數量之有價證券返還之。證券集中保管事業為處理保管業務，得就保管之股票、公司債以該證券集中保管事業之名義登載於股票發行公司股東名簿或公司債存根簿。證券集中保管事業於股票、公司債發行公司召開股東會、債權人會議，或決定分派股息及紅利或其他利益，或還本付息前，將所保管股票及公司債所有人之本名或名稱、住所或居所及所持有數額通知該股票及公司債之發行公司時，視為已記載於公司股東名簿、公司債存根簿或已將股票、公司債交存公司，不適用公司法第一百六十五條第一項、第一百七十六條、第二百六十條及第二百六十三條第三項之規定。前二項規定於政府債券及其他有價證券準用之。
 
-> 釋：一、第一項未修正。二、第二項、第三項新增。為簡化現行證券交割作業，發揮證券集中保管功能，其買賣之交割，明定得以帳簿劃撥方式為之。又以集中保管之有價證券為設質之際的者，其設質之交付亦明定得以帳簿劃撥方式為之，俾免亦須提出為設質之背書，減低集中保管之功能，爰增訂第二、三項。三、第四項新增。為簡化進入集中保管之股票，辦理過戶或設質登記仍須實物之移送，及送存人應分赴各股票發行公司辦理簽章，爰增訂第四項。
+> 釋：一、第四項新增，明定證券集中保管事業對混合保管有價證券所有權之歸屬理均應先經主管機關之核准始得為之。二、集中保管事業所保管有價證券，除股票之過戶有排除公司法第一百六十五條第一項及第一百七十六條規定之必要外，公司債納入集中保管後，其過戶亦須排除公司法第二百六十條及第二百六十三條第三項規定，爰修正第四項，移列為第五項。另增列證券集中保管事業就集中保管之股票得以自己名義登載於股東名簿；另集中保管事業於股票發行公司召開股東會或決定分派權息前，應依本項規定通知該發行公司，俾發行公司得據以通知股票所有人行使股權；有關公債之銷除前手及過戶事項亦有適用擬制人名義作法之必要，併規定於本項。
 
 * 43.1 任何人單獨或與他人共同取得任一公開發行公司已發行股份總額超過百分之十之股份者，應於取得後十日內，向主管機關申報其取得股份之目的、資金來源及主管機關所規定應行申報之事項；申報事項如有變動時，並隨時補正之。不經由有價證券集中交易市場或證券商營業處所，對非特定人公開收購公開發行公司之有價證券者，非經主管機關核准，不得為之。前項公開收購公開發行公司有價證券管理辦法，由主管機關定之。
 
@@ -180,19 +204,19 @@
 
 > 釋：為因應證券市場發展及健全證券交易市場，加強證券商功能，修正條文第四十五條已可實施綜合證券商之制度。則本條限制證券商之股票不得上市買賣規定，亦須配合調整，以利推展綜合證券商制度，便於對外吸收資金，爰予以刪除。
 
-* 53 有左列情事之一者，不得充任證券商之董事、監察人或經理人；其已充任者，解任之，並由主管機關函請經濟部撤銷其董事、監察人或經理人登記：一、有公司法第三十條各款情事之一者。二、曾任法人宣告破產時之董事、監察人、經理人或與其地位相等之人，其破產終結未滿三年或調協未履行者。三、最近三年內在金融機構有拒絕往來或喪失債信之紀錄者。四、依本法之規定，受罰金以上刑之宣告，執行完畢、緩刑期滿或赦免後未滿五年者。五、違反第五十一條之規定者。六、受第五十六條及第六十六條第二款解除職務之處分，未滿五年者。
+* 53 有左列情事之一者，不得充任證券商之董事、監察人或經理人，其已充任者，解任之，並由主管機關函請經濟部撤銷其董事、監察人或經理人登記：一、有公司法第三十條各款情事之一者。二、曾任法人宣告破產時之董事、監察人、經理人或其他地位相等之人，其破產終結未滿三年或調協未履行者。三、最近三年內在金融機構有拒絕往來或喪失債信之紀錄者。四、依本法之規定，受罰金以上刑之宣告，執行完畢，緩刑期滿或赦免後未滿三年者。五、違反第五十一條之規定者。六、受第五十六條及第六十六條第二款解除職務之處分，未滿三年者。
 
-> 釋：一、參照公司法第三十條之立法例，修正本條序文，並將「除依公司法之規定」所指之「該法第三十條各款情事」列為第一款。二、現行第一款、第二款、第三款、第四款之款次遞移為第二款、第三款、第四款、第五款，又第四款僅限於「罰金」，不包括受拘役或有期徒刑之宣告，顯非合理，爰參照第五十四條第一項第五款之規定予以納入外，其餘各款文字未修正。三、配合第五十六條之修正及第六十六條增訂第二款，修正現行之第五款文字，款次並移列為第六款。
+> 釋：依第四款、第六款規定受處分者未滿五年，均不得充任證券商之董事、監察人或經理人，影響當事人權益至鉅，且有剝奪工作權過苛之嫌，爰將此二款之年限修正為「未滿三年者」，以昭法治與人權之衡平旨意。
 
-* 54 證券商僱用對於有價證券營業行為直接有關之業務人員，應年滿二十歲，並具備有關法令所規定之資格條件，並無左列各款情事之一者：一、受破產之宣告尚未復權者。二、兼任其他證券商之職務者。三、投資於其他證券商者。四、曾犯詐欺、背信罪或違反工商管理法律，受有期徒刑以上刑之宣告，執行完畢，緩刑期滿或赦免後未滿三年者。五、有前條第二款至第四款及第六款之情事者。六、違反主管機關依照本法所發布之命令者。前項業務人員之職稱，由主管機關以命令定之。
+* 54 證券商僱用對於有價證券營業行為直接有關之業務人員，應年滿二十歲，且具備有關法令所規定之資格條件，並無左列各款情事之一者：一、受破產之宣告尚未復權者。二、兼任其他證券商之職務者。三、（刪除）。四、曾犯詐欺、背信罪或違反工商管理法律，受有期徒刑以上刑之宣告，執行完畢、緩刑期滿或赦免後未滿三年者。五、有前條第二款至第四款及第六款之情事者。六、違反主管機關依照本法所發布之命令者。前項業務人員之職稱，由主管機關定之。
 
-> 釋：一、有關業務人員聘僱，以具備有關法令所規定之資格即可，無須侷限於具有行為能力之中華民國國民為必要，爰修正第一項。二、第二項未修正。
+> 釋：一、本法第四十五條及第五十一條對證券商及其董事、監察人、經理人投資於其他證券商，設有禁止規定，旨在規範證券商間相互投資，避免其藉資金之結合而有操縱、壟斷市場之虞。但證券商雇用之業務人員並非證券商所有權與經營權之實際主體，若亦禁止其投資其他證券商，恐有矯枉過正之嫌，爰刪除第一項第三款之規定。另將「應為有行為能力之中華民國國民」修正為「應年滿二十歲」。二、第二項刪除「以命令」三字，係為配合其他法令用語作文字修正。
 
 * 55 證券商於辦理公司設立登記後，應依主管機關規定，提存營業保證金。因證券商特許業務所生債務之債權人，對於前項營業保證金，有優先受清償之權。
 
-* 56 主管機關發現證券商之董事、監察人及受僱人，有違背本法或其他有關法令之行為，足以影響證券業務之正常執行者，除得隨時命令該證券商解除其職務外，並得視其情節之輕重，對證券商處以第六十六條所定之處分。前項人員於解除職務後，應由證券商申報主管機關。
+* 56 主管機關發現證券商之董事、監察人及受僱人有違背本法或其他有關法令之行為，足以影響證券業務之正常執行者，除得隨時命令該證券商停止其一年以下業務之執行或解除其職務外，並得視其情節之輕重，對證券商處以第六十六條所定之處分。
 
-> 釋：一、現行條文第一項所定解任職務之對象，僅限於證券商之董事、監察人、經理人及對於有價證券營業行為直接有關之業務人員，致證券商屢有以利用其他受僱人員，為違背本法或其他有關法令之行為，以規避本法之管理。爰將「經理人及對於有價證券營業行為直接有關之業務人員」修正為「受僱人」。另為督促證券商之組織健全，對所屬人員善盡監督之責，爰於現行規定得隨時命令該證券商解除其職務外，增列「並得視其情節之輕重，對證券商處以第六十六條所定之處分」。二、第二項未修正。
+> 釋：原條文規定主管機關發現證券商之董事、監察人及受僱人，有違背相關法令之行為者，得隨時命令該證券商解除其職務，此規定造成證券商之從業人員一旦違規，即不論情節輕重一概遭解除職務處分，致使有心從事證券商或證券服務事業（本法第十八條之一準用本條）等相關業務者，五年內無法任職於證券商或其他相關行業，恐有情輕法重，處分過苛之虞。爰修正為「停止其一年以下業務之執行或解除其職務外」。
 
 * 57 證券商取得經營證券業務之特許，或設立分支機構之許可後，經主管機關發覺有違反法令或虛偽情事者，得撤銷其特許或許可。
 
@@ -218,9 +242,9 @@
 
 * 65 主管機關於調查證券商之業務、財務狀況時，發現該證券商有不符合規定之事項，得隨時以命令糾正之。
 
-* 66 證券商違反本法或依本法所發布之命令者，除依本法處罰外，主管機關並得視情節之輕重，為左列處分：一、警告。二、命令該證券商解除其董事、監察人或經理人職務。三、六個月以內之停業。四、營業許可之撤銷。
+* 66 證券商違反本法或依本法所發布之命令者，除依本法處罰外，主管機關並得視情節之輕重，為左列處分：一、警告。二、命令該證券商解除其董事、監察人或經理人職務。三、對公司或分支機構就其所營業務之全部或一部為六個月以內之停業。四、對公司或分支機構營業許可之撤銷。
 
-> 釋：為增強對證券商管理，防止違規與不法情事發生。參考銀行法第一百三十六條及證券交易法第一百六十三條，增訂第二款「命令該證券商解除其董事、監察人或經理人職務」之處分，現行第二款及第三款則遞移為第三款及第四款。
+> 釋：一、為使主管機關對違規證券商能視其情節之輕重，為適當之裁量處分，並考量證券商已漸趨大型化，為免其受停業處分後，影響業者營業權益過鉅，且損及廣泛投資人之利益，修正第三款視證券商之違規情節，對公司或分支機構就其所營業業務之全部或一部為一定期間之停業。二、證券商都有分公司，若有違規將會被處以全部停業之處分造成證券商之嚴重損失，修正第四款得對公司或分支機構營業許可之撤銷。
 
 * 67 證券商經主管機關依本法之規定撤銷其特許或命令停業者，該證券商應了結其被撤銷前或停業前所為有價證券之買賣或受託之事務。
 
@@ -242,7 +266,9 @@
 
 > 釋：配合第七十一條增訂第二項，爰於本條增列除外規定。
 
-* 75 證券承銷商出售依第七十一條規定所取得之有價證券，應依本法之規定，於有價證券集中交易市場為之；其未上市者，得於經主管機關依第六十二條核准之證券經紀商或證券自營商之營業處所為之。
+* 75 證券承銷商出售依第七十一條規定所取得之有價證券，其辦法由主管機關定之。
+
+> 釋：增加承銷商出售其所包銷有價證券之銷售管道，不再局限於僅能透過流通市場處理，改由主管機關以命令定之，以配合市場狀況。
 
 * 76 證券承銷商承銷契約，應記載左列事項：一、契約當事人之名稱、地址及其負責人之姓名。二、包銷或代銷之標的名稱、數量、金額及發行價格。三、主管機關核准募集、發行或申報生效之年、月、日。四、承銷期間之起訖日期。五、承銷付款日期及方式。六、包銷報酬或代銷手續費之計算及支付日期。七、包銷之方式、包銷時賸餘有價證券之認購方法，或代銷時賸餘有價證券之退還方法。八、其他主管機關所規定事項。證券承銷商共同承銷者，應指定一承銷商為主辦承銷商，其共同契約之內容，除適用前項之規定外，並應訂明主辦承銷商與其他共同承銷商承銷比例及其責任內容。
 
@@ -254,7 +280,9 @@
 
 * 79 證券承銷商出售其所承銷之有價證券，應依第三十一條第一項之規定，代理發行人交付公開說明書。
 
-* 80 證券承銷商於承銷期間內，應按其契約所訂之發行價格銷售，並應一次收款。
+* 80 （刪除）
+
+> 釋：配合第七十五條之修正，爰予刪除。
 
 * 81 證券承銷商包銷有價證券者，其包銷之總金額，不得超過其流動資產減流動負債後餘額之一定倍數；其標準由主管機關以命令定之。共同承銷者，每一證券承銷商包銷總金額之計算，依前項之規定。
 
@@ -272,7 +300,9 @@
 
 * 88 第八十六條第一項及第八十七條第一項之書件，應保存於證券經紀商之營業處所。
 
-* 89 證券商應依其經營證券業務之種類，分別地區，組織同業公會。證券商非加入同業公會，不得開業。
+* 89 證券商非加入同業公會，不得開業。
+
+> 釋：證券商成立同業公會之組織型態為「全國性單一公會」，爰刪除第一項，原第二項未修正，移列第一項。
 
 * 90 證券商同業公會章程之主要內容，及其業務之指導與監督，由主管機關以命令定之。
 
@@ -310,7 +340,9 @@
 
 * 105 會員制證券交易所之章程，應記載左列事項：一、目的。二、名稱。三、主事務所所在地，及其開設有價證券集中交易市場之場所。四、關於會員資格之事項。五、關於會員名額之事項。六、關於會員紀律之事項。七、關於會員出資之事項。八、關於會員請求退會之事項。九、關於董事、監事之事項。十、關於會議之事項。十一、關於會員存置、交割清算基金之事項。十二、關於會員經費之分擔事項。十三、關於業務之執行事項。十四、關於解散時賸餘財產之處分事項。十五、關於會計事項。十六、公告之方法。十七、關於主管機關規定之其他事項。
 
-* 106 會員不得兼為其他證券交易所之會員，或與公司制證券交易所訂立使用有價證券集中交易市場之契約。
+* 106 （刪除）
+
+> 釋：一、本條刪除。二、為配合國際化政策，使證券商可成為國外證券交易所之會員，爰予刪除。
 
 * 107 會員得依章程之規定請求退會，亦得因左列事由之一而退會：一、會員資格之喪失。二、會員公司之解散或撤銷。三、會員之除名。
 
@@ -350,21 +382,23 @@
 
 * 125 公司制證券交易所章程，除依公司法規定者外，並應記載左列事項：一、在交易所集中交易之經紀商或自營商之名額及資格。二、存續期間。前項第二款之存續期間，不得逾十年。但得視當地證券交易發展情形，於期滿三個月前，呈請主管機關核准延長之。
 
-* 126 證券商及其股東或經理人不得為公司制證券交易所之董事、監察人或經理人。但金融機構兼營證券業務者，因投資關係，並經主管機關核准者，除經理人職位外，不在此限。公司制證券交易所之董事、監察人至少應有三分之一，由主管機關指派非股東之有關專家任之；不適用公司法第一百九十二條第一項及第二百十六條第一項之規定。
+* 126 證券商之董事、監察人、股東或受僱人不得為公司制證券交易所之經理人。公司制證券交易所之董事及監察人至少應有三分之一，由主管機關指派非股東之有關專家任之；不適用公司法第一百九十二條第一項及第二百十六條第一項之規定。
 
-> 釋：一、本條原立法意旨係為杜防證券商人員兼任公司制證券交易所職務時，發生利用職務操縱圖利情事。惟鑒於金融事業自有其本身主要業務，其投資公司制證券交易所以及兼營證券業務，多出於執行政府金融措施，且需受財政部監督管理，其指派代表兼任公司制證券交易所董事、監察人，應無發生流弊之虞，爰參照銀行法第三十五條之一，增列但書，准其兼任。二、第二項新增。證券交易所為證券集中交易市場之核心，集中交易市場之建立、市場之運作以及交易秩序之維護，具有公益性質。為使社會公正人士或證券投資專家參與證券交易所董事會表達其意見，或以監察人監督公司業務之執行，以發揮證券交易所實際功能，爰參照第一百十三條會員制證券交易所選任非會員為董事之例，增訂本條第二項。
+> 釋：為配合第一百二十八條之修正，證券商得購買公司制證券交易所股份，因此一投資關係，宜放寬使其得兼任證券交易所之董事、監察人，但為避免因執行業務之利害衝突，及貫徹專職經營之原則，故證券交易所之經理人仍不得兼任。爰修正第一項。
 
 * 127 公司制證券交易所發行之股票，不得於自己或他人開設之有價證券集中交易市場，上市交易。
 
-* 128 公司制證券交易所不得發行無記名股票。
+* 128 公司制證券交易所不得發行無記名股票；其股份轉讓之對象，以依本法許可設立之證券商為限。每一證券商得持有證券交易所股份之比率，由主管機關定之。
 
-> 釋：現行條文後段對外國人持有公司制證券交易所股權之限制，違反服務貿易總協定第十六條市場開放之規定，且與證券市場自由化、國際代之政策相悖，爰予刪除。
+> 釋：為過渡公司制證券交易所成為會員制之需要，爰修正本條明定證券交易所股票轉讓之對象以證券商為限；另為避免壟斷並規定每一證券商之持有證券交易所股份之比率由主管機關定之。
 
 * 129 在公司制證券交易所交易之證券經紀商或證券自營商，應由交易所與其訂立供給使用有價證券集中交易市場之契約，並檢同有關資料，申報主管機關核備。
 
 * 130 前條所訂之契約，除因契約所訂事項終止外，因契約當事人一方之解散或證券自營商、證券經紀商業務特許之撤銷或歇業而終止。
 
-* 131 在公司制證券交易所交易之證券自營商或證券經紀商，不得在其他公司制證券交易所交易，或兼為會員制證券交易所之會員。
+* 131 （刪除）
+
+> 釋：一、本條刪除。二、為配合國際化政策，使證券商可成為國外證券交易所之會員，爰予刪除。
 
 * 132 公司制證券交易所於其供給使用有價證券集中交易市場之契約內，應訂立由證券自營商或證券經紀商繳存交割結算基金，及繳付證券交易經手費。前項交割結算基金金額標準，由主管機關以命令定之。第一項之經手費費率，應由證券交易所會同證券商同業公會擬訂，申報主管機關核定之。
 
@@ -380,7 +414,9 @@
 
 > 釋：一、避免公司制證券交易所過度分派盈餘，或資產重估增值徒使股份膨脹等，增列第四十一條之準用。二、現行第五十三條「第一款至第三款及第五款」之款次已修正改列為第二款至第四款及第六款，又修正條文第五十三條第一款有關公司法第三十條規定事項，仍應準用，爰修正為「第五十三條第一款至第四款以及第六款」。
 
-* 138 證券交易所，除分別訂定各項準則外，應於其業務規則或營業細則中將有關左列各款事項詳細訂定之：一、有價證券之上市。二、有價證券集中交易市場之使用。三、證券經紀商或證券自營商之買賣受託。四、市場集會之開閉與停止。五、買賣種類。六、證券自營商或證券經紀商間進行買賣有價證券之程序，及買賣契約成立之方法。七、買賣單位。八、價格升降單位及幅度。九、結算及交割日期與方法。十、其他有關買賣之事項。前項各款之訂定，不得違反法令之規定；其有關證券商利益事項，並應先徵詢證券商同業公會之意見。
+* 138 證券交易所除分別訂定各項準則外，應於其業務規則或營業細則中，將有關左列各款事項詳細訂定之：一、有價證券之上市。二、有價證券集中交易市場之使用。三、證券經紀商或證券自營商之買賣受託。四、市場集會之關閉與停止。五、買賣種類。六、證券自營商或證券經紀商間進行買賣有價證券之程序，及買賣契約成立之方法。七、買賣單位。八、價格升降單位及幅度。九、結算及交割日期與方法。十、買賣有價證券之委託數量、價格、撮合成交情形等交易資訊之即時揭露。十一、其他有關買賣之事項。前項各款之訂定，不得違反法令之規定；其有關證券商利益事項，並應先徵詢證券商同業公會之意見。
+
+> 釋：一、證券交易所主事集中交易市場之交易系統運作，對於交易資訊之掌控最為完整、詳實，而盤中交易資訊為投資判斷重要之依據，宜由證券交易所統籌盤中交易資訊及時揭露事宜，爰於第一項增訂第十款俾資依據。二、第一項第十款移列第十一款。
 
 * 139 依本法發行之有價證券，得由發行人向證券交易所申請上市。股票已上市之公司，再發行新股者，其新股股票於向股東交付之日起上市買賣。但公司有第一百五十六條第一項各款情事之一時，主管機關得限制其上市買賣。前項發行新股上市買賣之公司，應於新股上市後十日內，將有關文件送達證券交易所。
 
@@ -418,17 +454,17 @@
 
 * 154 證券交易所得就其證券交易經手費提存賠償準備金，備供前條規定之支付，其攤提方法、攤提比率、停止提存之條件及其保管、運用之方法，由主管機關以命令定之。因有價證券集中交易市場買賣所生之債權，就第一百零八條及第一百三十二條之交割結算基金有優先受償之權，其順序如左：一、證券交易所。二、委託人。三、證券經紀商、證券自營商。交割結算基金不敷清償時，其未受清償部分，得依本法第五十五條第二項之規定受償之。
 
-* 155 對於在證券交易所上市之有價證券，不得有左列各款之行為：一、在集中交易市場報價，業經有人承諾接受而不實際成交或不履行交割，足以影響市場秩序者。二、在集中交易市場，不移轉證券所有權而偽作買賣者。三、意圖抬高或壓低集中交易市場某種有價證券之交易價格，與他人通謀，以約定價格於自己出售，或購買有價證券時，使約定人同時為購買或出售之相對行為者。四、意圖抬高或壓低集中交易市場某種有價證券之交易價格，自行或以他人名義，對該有價證券，連續以高價買入或以低價賣出者。五、意圖影響集中交易市場有價證券交易價格，而散布流言或不實資料者。六、直接或間接從事其他影響集中交易市場某種有價證券交易價格之操縱行為者。前項之規定，於證券商營業處所買賣有價證券準用之。違反前二項規定者，對於善意買入或賣出有價證券之人所受之損害，應負賠償之責。第二十條第四項之規定，於前項準用之。
+* 155 對於在證券交易所上市之有價證券，不得有左列各款之行為：一、在集中交易市場報價，業經有人承諾接受而不實際成交或不履行交割，足以影響市場秩序者。二、（刪除）三、意圖抬高或壓低集中交易市場某種有價證券之交易價格，與他人通謀，以約定價格於自己出售，或購買有價證券時，使約定人同時為購買或出售之相對行為者。四、意圖抬高或壓低集中交易市場某種有價證券之交易價格，自行或以他人名義，對該有價證券，連續以高價買入或以低價賣出者。五、意圖影響集中交易市場有價證券交易價格，而散布流言或不實資料者。六、直接或間接從事其他影響集中交易市場某種有價證券交易價格之操縱行為者。前項之規定，於證券商營業處所買賣有價證券準用之。違反前二項規定者，對於善意買入或賣出有價證券之人所受之損害，應負賠償之責。第二十條第四項之規定，於前項準用之。
 
-> 釋：一、本條立法意旨原在防止證券價格受操縱，違反者，應依第一百七十一條規定處以刑罰，惟因第二款至第六款均以「意圖影響市場行情」為要件，何謂「市場行情」，主管機關與法院見解，頗生歧異，致管理及移罰效果不彰，爰將本條各款作左列修正：（一）有第一款及第二款之行為，即足以破壞市場交易秩序及公平，爰予以修正之。（二）將第三款、第四款及第六款之「市場行情」均修正為「集中交易市場某種有價證券交易價格」，並將第三款及第四款之「意圖影響」參照美國證券交易法第九條，修正為「意圖抬高或壓低」，以資明確。（三）於第四款增列「自行或以他人名義」之主體要件，以資周延。（四）第五款「散布．．．．之流言或不實資料」本屬惡意之行為，則該款之「惡意」文字顯屬贊詞，爰刪除「惡意」二字及「足以」之要件。（五）第六款作文字修正。二、第二項新增。將現行第六十二條第三項準用本條之規定，移列為本條第二項，以資明確。三、第三項新增。違反第一項及第二項規定者，第一百七十一條僅規定刑事責任，對善意之有價證券取得人或出賣人所受損害並無實益，為有效防止證券價格受操縱，增訂第三項，明定其應負損害賠償責任。四、增訂第四項關於委託證券經紀商以行紀名義買入或賣出之人，視為前項買入或賣出有證券者之準用規定。
+> 釋：一、第一項第二款刪除。二、第一項第三款係規範所謂「相對委託」之交易行為，此種行為亦製造市場交易活絡之假象，影響市場行情，實有必要予以禁止；再者，本款與四款「意圖」須與其刻意之炒作行為結合才有構成犯罪之可能；而司法機關審理時，更須詳究其不法意圖之存在，始可認為該當本條之犯罪構成要件，加以定罪論刑，並不至於有浮濫或擴張適用之虞。三、為有效規範市場秩序，保障投資人權益，修正第一項第六款有嚇阻不法之徒利用各種操縱手段或市場弊端不當影響市場行情之功能。
 
 * 156 主管機關對於已在證券交易所上市之有價證券，發生左列各款情事之一時，得命令停止其一部或全部之買賣，或對證券自營商、證券經紀商之買賣數量加以限制：一、發行該有價證券之公司遇有訴訟事件或非訟事件，其結果足使公司解散或變動其組織、資本、業務計畫、財務狀況或停頓生產，而有影響市場秩序或損害公益之虞者。二、發行該有價證券之公司，遇有重大災害，簽訂重要契約，發生特殊事故，改變業務計畫之重要內容或退票，其結果足使公司之財務狀況有顯著重大之變更，而有影響市場秩序或損害公益之虞者。三、發行該有價證券公司之行為，有虛偽不實或違法情事，足以影響其證券價格，而及於市場秩序或損害公益之虞者。四、該有價證券之市場價格，發生連續暴漲或暴跌情事，並使他種有價證券隨同為非正常之漲跌，而有影響市場秩序或損害公益之虞者。已上市之有價證券，發生前項各款以外之情事，顯足影響市場秩序或損害公益者，主管機關經報請財政部核准後，準用前項之規定辦理。
 
 > 釋：一、本條第一項將第一、二款所定「業務計劃」修正為「業務計畫」。二、第二項配合證券管理委員會改隸，將「經濟部」修正為「財政部」，並作文字修正。三、發行有價證券之公司其信用之良窳事涉公眾利益，對其退票不應視之為一般公司行號，應作較嚴格之管理，以促使其信用健全，經營基礎穩固，以保障公眾投資之安全。
 
-* 157 發行股票公司董事、監察人、經理人或持有公司股份超過百分之十之股東，對公司之上市股票，於取得後六個月內再行賣出，或於賣出後六個月內再行買進，因而獲得利益者，公司應請求將其利益歸於公司。發行股票公司董事會或監察人不為公司行使前項請求權時，股東得以三十日之限期，請求董事或監察人行使之；逾期不行使時，請求之股東得為公司行使前項請求權。董事或監察人不行使第一項之請求以致公司受損害時，對公司負連帶賠償之責。第一項之請求權，自獲得利益之日起二年間不行使而消滅。第二十二條之二第三項之規定，於第一項準用之。
+* 157 發行股票公司董事、監察人、經理人或持有公司股份超過百分之十之股東，對公司之上市股票，於取得後六個月內再行賣出，或於賣出後六個月內再行買進，因而獲得利益者，公司應請求將其利益歸於公司。發行股票公司董事會或監察人不為公司行使前項請求權時，股東得以三十日之限期，請求董事或監察人行使之；逾期不行使時，請求之股東得為公司行使前項請求權。董事或監察人不行使第一項之請求以致公司受損害時，對公司負連帶賠償之責。第一項之請求權，自獲得利益之日起二年間不行使而消滅。第二十二條之二第三項之規定，於第一項準用之。關於公司發行具有股權性質之其他有價證券，準用本條規定。
 
-> 釋：一、配合第二十二條之二之增訂將第一項「持有公司百分之五以上股權之股東」修正為「持有公司股份超過百分之十之股東」。二、第二項、第三項、第四項未修正。三、第五項新增。為防股票持有人，藉配偶、未成年子女或他人名義持有股票，規避本條之限制，爰予以明定包括之。
+> 釋：一、增訂第六項。二、規範公司發行具有股權性質之其他有價證券如可轉換公司債等準用本條，以周嚴有價證券之歸入權行使規範。
 
 * 157.1 左列各款之人，獲悉發行股票公司有重大影響其股票價格之消息時，在該消息未公開前，不得對該公司之上市或在證券商營業處所買賣之股票，買入或賣出：一、該公司之董事、監察人及經理人。二、持有該公司股份超過百分之十之股東。三、基於職業或控制關係獲悉消息之人。四、從前三款所列之人獲悉消息者。違反前項規定者，應就消息未公開前其買入或賣出該股票之價格，與消息公開後十個營業日收盤平均價格之差額限度內，對善意從事相反買賣之人負損害賠償責任；其情節重大者，法院得依善意從事相反買賣之人之請求，將責任限額提高至三倍。第一項第四款之人，對於前項損害賠償，應與第一項第一款至第三款提供消息之人，負連帶賠償責任。但第一項第一款至第三款提供消息之人有正當理由相信消息已公開者，不負賠償責任。第一項所稱有重大影響其股票價格之消息，指涉及公司之財務、業務或該證券之市場供求，對其股票價格有重大影響，或對正當投資人之投資決定有重要影響之消息。第二十二條之二第三項之規定，於第一項第一款、第二款準用之；第二十條第四項之規定，於第二項從事相反買賣之人準用之。
 
@@ -462,41 +498,41 @@
 
 * 170 證券商同業公會及證券交易所應於章程或規則內，訂明有關仲裁之事項。但不得牴觸本法及商務仲裁條例。
 
-* 171 違反第二十條第一項或第一百五十五條第一項、第二項之規定者，處七年以下有期徒刑、拘役或科或併科二十五萬元以下罰金。
+* 171 有左列情事之一者，處七年以下有期徒刑，得併科新臺幣三百萬元以下罰金：一、違反第二十條第一項、第一百五十五條第一項、第二項或第一百五十七條之一第一項之規定者。二、已依本法發行有價證券公司之董事、監察人、經理人或受僱人，以直接或間接方式，使公司為不利益之交易，且不合營業常規，致公司遭受損害者。
 
-> 釋：一、配合第一百五十五條之修正，將「第一百五十五條」修正為「第一百五十五條第一項、第二項」。二、本法現行規定之罰金、罰鍰數額，係五十七年制定本法時所定者，惟目前經濟情況已有變更，其數額顯有偏低，不足以達到法律上之目的，爰參酌七十四年修正銀行法第一百二十五條等調整罰金數額之標準，將本條罰金上限提高為二十五萬元。
+> 釋：一、本條原規範之刑責，其低刑度可處罰金，顯不足以嚇阻違法，爰參照銀行法第一百二十五條規定，提高其刑度，將罰金刑修正為新臺幣。另就違反第一百五十七條之一之刑事責任，依第一百七十五條規定，僅為二年以下有期徒刑，相形之下，顯然無從發揮嚇阻犯罪之功能。爰將違反第一百五十七條之一第一項禁止利用內部消息買賣公司股票圖利之規定之刑罰由第一百七十五條移列本條第一款，並提高其最高刑度為七年以下有期徒刑。二、已發行有價證券公司之董事、監察人、經理人及受僱人等相關人員，使公司為不合營業常規或不利益交易行為，嚴重影響公司及投資人權益，有詐欺及背信之嫌，因受害對象包括廣大之社會投資大眾，犯罪惡性重大，實有必要嚴以懲處，爰增列處罰。
 
-* 172 證券交易所及證券投資信託事業之董事、監事、監察人或受僱人，對於職務上之行為，要求期約或收受不正利益者，處五年以下有期徒刑、拘役或科或併科二十萬元以下罰金。前項人員對於違背職務之行為，要求期約或收受不正利益者，處七年以下有期徒刑、拘役或科或併科二十五萬元以下罰金。犯前二項之罪者，所收受之財物沒收之；如全部或一部不能沒收時，追徵其價額。
+* 172 證券交易所及證券投資信託事業之董事、監察人或受僱人，對於職務上之行為，要求期約或收受不正利益者，處五年以下有期徒刑、拘役或科或併科新臺幣二百四十萬元以下罰金。前項人員對於違背職務之行為，要求期約或收受不正利益者，處七年以下有期徒刑，得併科新臺幣三百萬元以下罰金。犯前二項之罪者，所收受之財物沒收之；如全部或一部不能沒收時，追徵其價額。
 
-> 釋：一、證券投資信託事業經理證券投資信託基金，所屬人員對基金之經營，亦有可能發生對於職務上之行為，要求期約或收受不正利益之情事，爰於第一項增列「證券投資信託事業」。二、鑑於目前證券交易所已有部分聘僱人員參與執行重要業務，為健全交易制度，亟須嚴防利用職務圖利，爰將第一項中之「職員」修正為「受僱人」以資涵蓋。三、目前經濟情況已有變更，原定數額顯有偏低，爰將第一項罰金上限提高為二十萬元、第二項罰金上限提高為二十五萬元。四、第三項未修正。
+> 釋：罰金刑修正為以新臺幣為單位。另由於違反本法之犯罪者，往往多屬於嚴重之經濟犯罪，參照過去執行案例實務，低額罰金顯不足以收嚇阻之效，故參酌銀行法提高罰金刑之幅度，將最高刑度提高。
 
-* 173 對於前條人員關於違背職務之行為，行求期約或交付不正利益者，處三年以下有期徒刑、拘役或科或併科十五萬元以下罰金。犯前項之罪而自首者，得免除其刑。
+* 173 對於前條人員關於違背職務之行為，行求期約或交付不正利益者，處三年以下有期徒刑、拘役或科或併科新臺幣一百八十萬元以下罰金。犯前項之罪而自首者，得免除其刑。
 
-> 釋：一、第一項作左列修正：（一）參考刑法第一百二十二條第三項、戡亂時期貪污治罪條例第十一條第一項不罰職務行為之行賄，爰增列「關於違背職務之行為」等文字，以資限定。（二）第一百七十一條至第一百七十七條，除第一百七十六條外，對罰金之科處有「或科或併科」、「或科」及「或併科」三種規定方式，為統一並考照銀行法立法例，爰均調整為「或科或併科」，俾具彈性。（三）目前經濟情況已有變更，原定數額顯有偏低，爰將罰金上限提高為十五萬元。二、第二項未修正。
+> 釋：罰金型修正為以新臺幣為單位。另由於違反本法之犯罪者，往往多屬於嚴重之經濟犯罪，參照過去執行案例實務，低額罰金顯不足以收嚇阻之效，故參酌銀行法提高罰金刑之幅度，將最高刑度提高。
 
-* 174 有左列情事之一者，處五年以下有期徒刑、拘役或科或併科二十萬元以下罰金：一、於依本法第三十條、第四十四條第一項至第三項或第九十三條規定之申請事項為虛偽之記載者。二、對有價證券之行情或認募核准之重要事項為虛偽之記載而散布於眾者。三、發行人或其負責人、職員有第三十二條第一項之情事，而無同條第二項免責事由者。四、發行人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料之內容有虛偽之記載者。五、發行人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務文件之內容有虛偽之記載者。六、就發行人或某種有價證券之交易，依據不實之資料，作投資上之判斷，而以報刊、文書、廣播、電影或其他方法表示之者。七、會計師或律師，於查核公司有關證券交易之契約、報告書或證明文件時，為不實之簽證者。主管機關對於前項第七款之情事，得予以停止執行簽證工作之處分。
+* 174 有左列情事之一者，處五年以下有期徒刑、拘役或科或併科新臺幣二百四十萬元以下罰金：一、於依本法第三十條、第四十四條第一項至第三項或第九十三條規定之申請事項為虛偽之記載者。二、對有價證券之行情或認募核准之重要事項為虛偽之記載而散布於眾者。三、發行人或其負責人、職員有第三十二條第一項之情事，而無同條第二項免責事由者。四、發行人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料之內容有虛偽之記載者。五、發行人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務文件之內容有虛偽之記載者。六、就發行人或某種有價證券之交易，依據不實之資料，作投資上之判斷，而以報刊、文書、廣播、電影或其他方法表示之者。七、會計師或律師，於查核公司有關證券交易之契約、報告書或證明文件時，為不實之簽證者。主管機關對於前項第七款之情事，得予以停止執行簽證工作之處分。
 
-> 釋：一、第一項作左列修正：（一）序文增列「或併科」，並將罰金上限提高為二十萬元。（二）配合第四十四條之修正，將第一款中之「第四十四條」修正為「第四十四條第一項至第三項」。（三）第三款配合第三十二條增訂第二項，將「第三十二條之情事者」修正為「第三十二條第一項之情事，而無同條第二項免責事由者」。（四）第十八條所定之事業，對市場之功能，並不亞於證券商等機構，為增強對各該事業管理，防止有不法作為，爰於第四款及第五款增列對各該事業亦適用之規定。（五）第七款現行規定以「明知有不實之記載，而仍予簽證者。」為要件，即有以未經查證之簽證，而以未明知抗辯，無法予以處罰，顯欠周延，爰修正為「為不實之簽證者。」二、第二項未修正。
+> 釋：罰金刑修正為以新臺幣為單位。另由於違反本法之犯罪者，往往多屬於嚴重之經濟犯罪，參照過去執行案例實務，低額罰金顯不足以收嚇阻之效，故參酌銀行法提高罰金刑之幅度，將最高刑度提高。
 
-* 175 違反第十八條第一項、第二十二條、第四十三條第一項、第四十三條之一第二項、第四十四條第一項至第三項、第六十條第一項、第六十二條第一項、第九十三條、第九十六條至第九十八條、第一百十六條、第一百二十條、第一百五十七條之一第一項或第一百六十條之規定者，處二年以下有期徒刑、拘役或科或併科十五萬元以下罰金。
+* 175 違反第十八條第一項、第二十二條、第二十八條之二第一項、第四十三條第一項、第四十三條之一第二項、第四十四條第一項至第三項、第六十條第一項、第六十二條第一項、第九十三條、第九十六條至第九十八條、第一百十六條、第一百二十條、或第一百六十條之規定者，處二年以下有期徒刑、拘役或科或併科新臺幣一百八十萬元以下罰金。
 
-> 釋：一、配合第四十三條、第四十四條、第六十二條之修正，修正本條所引起各條條文。又本法第六十七條並未分項，爰將本條所引「第九十七條第二項」修正為「第九十七條」。二、增列第十八條第一項暨配合增訂第四十三條之一、第一百五十七條之一，增列第四十三條之一第二項、第一百五十七條之一第一項之處罰。三、目前經濟情況已有變更，原定數額顯有偏低，爰將罰金上限提高為十五萬元。
+> 釋：一、罰金刑修正為以新臺幣為單位。另由於違反本法之犯罪者，往往多屬於嚴重之經濟犯罪，參照過去執行案例實務，低額罰金顯不足以收嚇阻之效，故參酌銀行法提高罰金刑之幅度，將最高刑度提高。二、將原第一百五十七條之一第一項之罰則改列於第一百七十一條加重處罰，本條之規定刪除。三、第一百五十七條之二第一項第一款適用對象為負責政策之公務人員，已受公務員服務法及刑法刑責規範，故將第二項刪除，以避免規定之重疊產生適用上之問題。
 
 * 176 （刪除）
 
 > 釋：一、第七十四條及第八十四條均屬行政上消極防弊規定，無處刑罰之必要，宜改為行政罰。二、為符合刑罰條文在前，行政罰條文在後之體例，本條移列為第一百七十七條之一，本條刪除。
 
-* 177 有左列情事之一者，處一年以下有期徒刑、拘役或科或併科十萬元以下罰金：一、違反第三十一條第一項、第三十四條、第四十條、第四十一條、第四十五條、第四十六條、第五十條第二項、第一百十九條、第一百二十八條、第一百五十條或第一百六十五條之規定者。二、違反主管機關依第六十一條所為之規定者。三、違反主管機關其他依本法所為禁止、停止或限制之命令者。
+* 177 有左列情事之一者，處一年以下有期徒刑、拘役或科或併科新臺幣一百二十萬元以下罰金：一、違反第三十一條第一項、第三十四條、第四十條、第四十一條、第四十五條、第四十六條、第五十條第二項、第一百十九條、第一百二十八條、第一百五十條或第一百六十五條之規定者。二、違反主管機關依第六十一條所為之規定者。
 
-> 釋：一、序文增列「或併科」，並將罰金上限提高為十萬元，理由同第一百七十一條說明二。二、將第一款所列之第五十八條、第七十三條、第七十七條、第七十九條、第一百四十一條、第一百四十四條、第一百四十五條第二項及第一百四十七條移列於第一百七十八條中改處行政罰。三、將第二款、第三款之證券有關機構應作為而不作為之處罰移列於第一百七十八條中改處行政罰。四、第四款移列為第二款，並配合第六十一條之修正，酌作文字修正。五、第五款移列為第三款。
+> 釋：一、罰金刑修正為以新臺幣為單位。另由於違反本法之犯罪者，往往多屬於嚴重之經濟犯罪，參照過去執行案例實務，低額罰金顯不足以收嚇阻之效，故參酌銀行法提高罰金刑之幅度，將最高刑度提高。二、第三款為一概括規定，牴觸罪刑法定主義，且主管機關所發布之行政命令何其多，一旦違反就要科以刑責，顯然嚴重侵害人權，違反憲法保障人權之規定故予刪除。
 
-* 177.1 違反第七十四條或第八十四條之規定者，處相當於所取得有價證券價金額以下之罰鍰。但不得少於二萬元。
+* 177.1 違反第七十四條或第八十四條之規定者，處相當於所取得有價證券價金額以下之罰鍰。但不得少於新臺幣十二萬元。
 
-> 釋：一、本條係由第一百七十六條改列，並將刑罰修正為行政罰。二、參照食品衛生管理法、銀行法等規定，增設罰鍰下限。
+> 釋：罰鍰處分修正為以新臺幣為單位；並為確實達行政罰鍰效果，斟酌將罰鍰額度提高。
 
-* 178 有左列情事之一者，處二萬元以上十萬元以下罰鍰：一、違反第二十二條之二第一項、第二項、第二十五條第一項、第二項、第四項、第二十六條之一、第三十六條第四項、第四十三條之一第一項、第五十八條、第六十九條第一項、第七十三條、第七十七條、第七十九條、第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條、第一百五十二條或第一百五十九條之規定者。二、發行人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料，逾期不提出，或對於主管機關依法所為之檢查予以拒絕或妨礙者。三、發行人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務之文件，不為製作、申報、公告、備置或保存者。四、違反主管機關依第二十六條第二項所定之公開發行公司董事、監察人股權成數及查核實施規則之規定者。有前項第二款至第四款規定之情事，經主管機關科處罰鍰，並責令限期辦理；逾期仍不辦理者，得繼續限期令其辦理，並按次連續各處四萬元以上二十萬元以下罰鍰，至辦理為止。
+* 178 有左列情事之一者，處新臺幣十二萬元以上六十萬元以下罰鍰：一、違反第二十二條之二第一項、第二項、第二十五條第一項、第二項、第四項、第二十六條之一、第三十六條第四項、第四十三條之一第一項、第五十八條、第六十九條第一項、第七十三條、第七十七條、第七十九條、第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條、第一百五十二條或第一百五十九條之規定者。二、發行人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料，逾期不提出，或對於主管機關依法所為之檢查予以拒絕或妨礙者。三、發行人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務之文件，不依規定製作、申報、公告、備置或保存者。四、違反主管機關依第二十六條第二項所定之公開發行公司董事、監察人股權成數及查核實施規則之規定者。五、違反第二十八條之二第二項、第四項至第七項及主管機關依第三項所規定之事項者。有前項第二款至第四款規定之情事，經主管機關科處罰鍰，並責令限期辦理；逾期仍不辦理者，得繼續限期令其辦理，並按次連續各處新臺幣二十四萬元以上一百二十萬元以下罰鍰，至辦理為止。
 
-> 釋：一、於第一款增列違反第二十二條之二第一項、第二項轉讓股權、第二十五條第一項、第二項、第四項股權申報之規定者暨違反第二十六條之一、第四十三條之一第一項，亦處本條之罰鍰，並配合第三十六條修正所引條文。二、將現行第一百七十七條第二款、第三款之證券有關機構應作為而不作為之處罰，移列為本條第一項第二款、第三款，由刑罰改處行政罰，並將第二款之「抗不提出」修正為「逾期不提出」，以資明確，避免行為人得藉故拖延。另增列第十八條所定之事業。三、第四款新增。為有效執行發行公司全體董事、監察人股權持股不足須補足或改選等之管理。四、第二項新增。參照稅捐稽徵法第四十五條、公司法第一百九十五條等立法例增訂第二項，對違反第一項第二款至第四款之規定者，得連續處罰直至辦理為止之規定，以加強管理。
+> 釋：一、罰鍰處分修正為以新臺幣為單位；並為確實達行政罰鍰效果，斟酌將罰鍰額度提高。二、配合第二十條之一規定，爰參照稅捐稽徵法第四十六條第一項、第二項，就拒不受調查者，予以適當之行政處分，爰於第一項增訂第五款。三、為防止藉逾期製作、申報、公告等方式規避行政責任，故修正第一項第三款，概括規定祇要不依規定製作、申報、公告等，即已構成行政罰鍰之要件，不以完全不作為為唯一條件。
 
 * 179 法人違反本法之規定者，依本章各條之規定處罰其為行為之負責人。
 
