公職人員選舉罷免法 2000.10.13

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -104,9 +104,9 @@
 
 > 釋：一、配合戶籍法之修訂，爰將第一項「或其本籍地」等文字，及第二項、第九項有關本籍規定予以刪除。二、配合地方制度法制化，第一項增列省（市）長候選人法定年齡之規定。三、配合憲法增修條文第十五條之規定，爰將第三項暨第四項、第五項後段但書監察委員選舉之規定予以刪除。四、原條文第四項至第七項移列為第二項至第五項。五、原第五項移列為第三項，並將「僑居」之定義予以界定。六、原第七項移列為第五項，並將「第一項、第三項至第六項」等文字修正為「前四項」。七、原第八項配合原第五項之修正，予以刪除。
 
-* 32 登記為省（市）長、縣（市）長、鄉（鎮、市）長候選人者，應具備左列之學、經歷：一、省（市）長候選人須專科以上學校畢業或高等考試以上考試及格，並具有行政工作經驗，或曾在專科以上學校擔任講師以上教職，或執行經高等考試及格之專門職業合計三年以上；或高級中等以上學校畢業或普通考試以上考試及格，並曾任省（市）議員以上公職或縣（市）長以上公職合計三年以上。二、縣（市）長候選人須專科以上學校畢業或高等考試以上考試及格，並具有行政工作經驗，或曾在專科以上學校擔任講師以上教職，或執行經高等考試及格之專門職業合計三年以上；或高級中等以上學校畢業或普通考試以上考試及格，並曾任縣（市）議員以上公職或鄉（鎮、市）長以上公職合計三年以上。三、鄉（鎮、市）長候選人須國民中學以上學校畢業或普通考試以上考試及格，並具有行政工作經驗三年以上或曾任鄉（鎮、市）民代表以上公職合計三年以上。前項各款學、經歷之認定，以檢覈行之。公職候選人檢覈規則由考試院定之。第一項所指行政工作，如為公務員時，在第一款、第二款指薦任或相當薦任以上職務，第三款指委任或相當委任以上職務。本法施行前，經公職候選人資格檢覈合格者，得不再經檢覈，取得各該公職候選人資格。曾經第一項第一款之公職候選人資格檢覈合格者，取得第二款、第三款公職候選人資格；曾經第二款公職候選人資格檢覈合格者，取得第三款公職候選人資格。
+* 32 （刪除）
 
-> 釋：一、議會係合議制，重視合議精神，爰刪除各級民意代表須具備學、經歷之規定。二、村里長與一般民選行政首長性質不同，爰併刪除原第八條學、經歷之限制規定。三、配合地方制度法制化，爰於第一項第一款增列省（市）長候選人學、經歷之規定。四、第四項配合第一項之修正，酌作文字修正。
+> 釋：民主政治宜採取更開放的態度，不應以學、經歷資格限制人民參選，讓有學識、有能力的人去自由競爭，透過民意選出優秀者。原條文規定不合情、不合理，應予刪除。
 
 * 33 二種以上公職人員選舉同時辦理時，申請登記為候選人者，以登記一種為限。同種公職人員選舉具有二個以上之候選人資格者，以登記一個為限。同時為二種或二個以上候選人登記時，其登記無效。
 
