--- a/行政-內政/行政程序法.md
+++ b/行政-內政/行政程序法.md
@@ -694,6 +694,10 @@
 
 > 釋：照審查條文通過。
 
+* 174.1 本法施行前，行政機關依中央法規標準法第七條訂定之命令，須以法律規定或以法律明列其授權依據者，應於本法施行後一年內，以法律規定或以法律明列其授權依據後修正或訂定；逾期失效。前項期間屆滿前一個月，行政院認有必要，經立法院同意後，得以命令延長之。
+
+> 釋：一、本條新增。二、行政程序法第四章就行政命令之分類並無中央法規標準法第七條之職權命令，而原條文實務上職權命令涉及人民權利義務而具對外效力者，或僅具規範機關內部秩序及運作而非直接對外發生法規範效力者，均亟待配合行政程序法檢討修正或廢止，基於法安定性原則，避免社會發生急激變化並保障人民既得權益，爰增訂第一項之過渡條款，俾符實需。三、職權命令之修正，尚涉及各項法律制定或修正之檢討，為期周延，有經立法院同意後，由行政院以命令延長其期間之必要，爰於第二項予以明定。
+
 * 175 本法自中華民國九十年一月一日施行。
 
 > 釋：照黨團協商條文通過。
