刑事訴訟法 2001.1.3

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -350,7 +350,9 @@
 
 > 釋：一、第一百零七條、第一百十條及第一百十八條均新增第二項，原條文已改列為第一項，第一百零八條第四項已修正為第六項，第一百二十條已修正移列為第一百零一條之一，爰將本條第一項文字配合修正。二、第三審係法律審，不宜就事實上之事項而為裁定，故案件在第三審上訴中且卷宗及證物已送交該法院者，於第三審法院羈押期間內，有關第一項處分，規定由第二審法院裁定。惟第二審法院因無卷證資料，倘為裁定有參閱必要，自得向第三審法院調閱，爰增訂第二項及第三項規定。三、檢察官既仍得為具保、責付或限制住居之決定，則於偵查中之沒入保證金、退保及命具保、責付或限制住居，亦可由檢察官以命令行之，爰增訂第四項。
 
-* 122 對於被告之身體、物件及住宅或其他處所，必要時得搜索之。對於第三人之身體、物件及住宅或其他處所，以有相當理由可信為被告或應扣押之物存在時為限，得搜索之。
+* 122 對於被告或犯罪嫌疑人之身體、物件、電磁紀錄及住宅或其他處所，必要時得搜索之。對於第三人之身體、物件、電磁紀錄及住宅或其他處所，以有相當理由可信為被告或犯罪嫌疑人或應扣押之物或電磁紀錄存在時為限，得搜索之。
+
+> 釋：一、本條對搜索之對象增列「犯罪嫌疑人」及「電磁紀錄」。二、重新界定「被告」之概念，將偵查中之「被告」正名為「犯罪嫌疑人」，與經檢察官偵查終結予以追訴之審判中之「被告」資以區別。
 
 * 123 搜索婦女之身體，應命婦女行之。但不能由婦女行之者，不在此限。
 
@@ -360,17 +362,43 @@
 
 * 126 政府機關或公務員所持有或保管之文書及其他物件應扣押者，應請求交付。但於必要時得搜索之。
 
-* 127 軍事上應秘密之處所，非得該管長官之允許，不得搜索。
+* 127 軍事上應秘密之處所，非得該管長官之允許，不得搜索。前項情形，除有妨害國家重大利益者外，不得拒絕。
 
-* 128 搜索，應用搜索票。搜索票，應記載左列事項：一、應搜索之被告或應扣押之物。二、應加搜索之處所、身體或物件。搜索票，於偵查中由檢察官簽名，審判中由審判長或受命推事簽名。搜索，除由檢察官或推事親自實施外，由司法警察或司法警察官執行。
+> 釋：本條增列第二項，除有關妨害國家重大利益者外，不得拒絕搜索。
 
-* 129 檢察官或推事親自搜索時，得不用搜索票。但應出示證件。
+* 128 搜索，應用搜索票。搜索票，應記載下列事項：一、案由。二、應搜索之被告、犯罪嫌疑人或應扣押之物。但被告或犯罪嫌疑人不明時，得不予記載。三、應加搜索之處所、身體、物件或電磁紀錄。四、有效期間，逾期不得執行搜索及搜索後應將搜索票交還之意旨。搜索票，由法官簽名。法官並得於搜索票上對執行人員為適當之指示。核發搜索票之程序，不公開之。
 
-* 130 司法警察或司法警察官逮捕被告或執行拘提、羈押時，雖無搜索票，得逕行搜索其身體。
+> 釋：一、配合法院組織法之用語，將「推事」修正為「法官」。二、搜索時究係因何案由而搜索，應於搜索票中予以記載，始足以保障人權，爰予增訂，列為第二項第一款。三、搜索票簽發之後，究竟應於何時執行搜索，始具法律上之效力，事關人權之保障，爰於本條第二項第四款增列之。四、第三項刪除檢察官簽發搜索，增定法官於核發搜索票時，得於其上對執行人員為必要的指示。五、原第四項刪除檢察官得親自搜索之規定並移列第一百二十八條之二第一項。
 
-* 131 有左列情形之一者，司法警察或司法警察官雖無搜索票，得逕行搜索住宅或其他處所：一、因逮捕被告或執行拘提、羈押者。二、因追躡現行犯或逮捕脫逃人者。三、有事實足信為有人在內犯罪而情形急迫者。前項搜索，應於執行後二十四小時內，呈報檢察官或法院。
+* 128.1 偵查中檢察官認有搜索之必要者，除第一百三十一條第二項所定情形外，應以書面記載前條第二項各款之事項，並敘述理由，聲請該管法院核發搜索票。司法警察官因調查犯罪嫌疑人犯罪情形及蒐集證據，認有搜索之必要時，得依前項規定報請檢察官許可後，向該管法院聲請核發搜索票。前二項之聲請經法院駁回者，不得聲明不服。
+
+> 釋：一、本條新增。二、案件於偵查中，檢察官如認有搜索之必要時，應以書面記載前條第二項各款之事項，並敘述搜索之理由，聲請管轄法院審核決定之，爰參照刑事訴訟法第九十三條第二項關於檢察官聲請羈押之規定，增定第一項。三、司法警察官，亦有偵查犯罪之權責，如認有搜索之必要時，為爭取時效亦許其直接聲請法院核發搜索票，爰增定第二項。四、為保障人權起見，明定對於法院駁回羈押之聲請者，不得聲明不服。若檢察官仍認有羈押之必要者，本得檢附新事證，重新聲請羈押。爰增定第三項。
+
+* 128.2 搜索，除由法官或檢察官親自實施外，由檢察事務官、司法警察官或司法警察執行。檢察事務官為執行搜索，必要時，得請求司法警察官或司法警察輔助。
+
+> 釋：一、本條新增。二、關於搜索執行之規定，原規定於第一百二十八條第四項，但以其性質異於該條其他部分，為求簡明、區辦，乃將原第一百二十八條第四項修正移出，列為本條第一項，並配合法院組織法之用語，將「推事」修正為「法官」。三、檢察事務官為執行搜索，有請求司法警察官或司法警察輔助之可能與需要，爰增定第二項，以求周延。
+
+* 129 （刪除）
+
+> 釋：一、本條刪除。二、配合第一百二十八條第四項之修正，刪除檢察官親自搜索得不用搜索票規定。又配合令狀原則建立書面紀錄以供事後審查之依據，併刪除法官職權搜索不用搜索票之規定。
+
+* 130 檢察官、檢察事務官、司法警察官或司法警察逮捕被告、犯罪嫌疑人或執行拘提、羈押時，雖無搜索票，得逕行搜索其身體、隨身攜帶之物件、所使用之交通工具及其立即可觸及之處所。
+
+> 釋：一、依第八十七條、第八十八條規定，檢察官有逮捕被告之權，檢察事務官有執行拘提之職權，故於本條增列檢察官、檢察事務官之逕行搜索權。另司法警察調查中逮捕、拘提對象稱犯罪嫌疑人，故增列之。二、合法逮捕後之附帶搜索，除被告身體外，對於放在身旁之手提包，所坐之沙發，所開之車輛等，應納入盤點搜索之範圍。
+
+* 131 有下列情形之一者，檢察官、檢察事務官、司法警察官或司法警察，雖無搜索票，得逕行搜索住宅或其他處所：一、因逮捕被告、犯罪嫌疑人或執行拘提、羈押者。二、因追躡現行犯或逮捕脫逃人者。三、有事實足信為有人在內犯罪而情形急迫者。檢察官於偵查中有相當理由認為情況急迫，非迅速搜索，證據有偽造、變造、湮滅或隱匿之虞者，得逕行搜索，或指揮檢察事務官、司法警察官或司法警察執行搜索。前二項搜索，由檢察官為之者，應於實施後三日內陳報該管法院；由檢察事務官、司法警察官或司法警察為之者，應於執行後三日內報告該管檢察署檢察官及法院。法院認為不應准許者，得於三日內撤銷之。
+
+> 釋：一、依第八十七條、第八十八條規定，檢察官有逮捕被告之權，檢察事務官有執行拘提之職權，故於本條增列檢察官、檢察事務官之徑行搜索權。另司法警察調查中逮捕、拘提對象稱犯罪嫌疑人，故增列之。二、檢察官於偵查中有相當理由認為情況急迫，須迅速搜索，得逕行搜索之，爰增定第二項。三、檢察官執行搜索結果，應讓簽發搜索票之法院知悉，爰增列檢察官指揮或執行搜索後，應函知法院。至於由檢察事務官、司法警察官或司法警察為之者，應報告其管轄之檢察署及法院。
+
+* 131.1 搜索，經受搜索人出於自願性同意者，得不使用搜索票。但執行人員應出示證件，並將其同意之意旨記載於筆錄。
+
+> 釋：一、本條新增。二、「同意搜索」為各國刑事訴訟法所允許，我國實務亦行之多年，本條明文規定之。
 
 * 132 抗拒搜索者，得用強制力搜索之。但不得逾必要之程度。
+
+* 132.1 檢察官或司法警察官於聲請核發之搜索票執行後，應將執行結果陳報核發搜索票之法院，如未能執行者，應敘明其事由。
+
+> 釋：一、本條係新增。二、執行搜索完畢後，聲請核發搜索票之人員，應以書面報告法院執行情形，以利查考。
 
 * 133 可為證據或得沒收之物，得扣押之。對於應扣押物之所有人、持有人或保管人，得命其提出或交付。
 
@@ -378,9 +406,13 @@
 
 * 135 郵政或電信機關，或執行郵電事務之人員所持有或保管之郵件、電報，有左列情形之一者，得扣押之：一、有相當理由可信其與本案有關係者。二、為被告所發或寄交被告者。但與辯護人往來之郵件、電報，以可認為犯罪證據或有湮滅、偽造、變造證據或勾串共犯或證人之虞，或被告已逃亡者為限。為前項扣押者，應即通知郵件、電報之發送人或收受人。但於訴訟程序有妨害者，不在此限。
 
-* 136 扣押，除由檢察官或推事親自實施外，得命司法警察或司法警察官執行。命司法警察或司法警察官執行扣押者，應於交與之搜索票內記載其事由。
+* 136 扣押，除由法官或檢察官親自實施外，得命檢察事務官、司法警察官或司法警察執行。命檢察事務官、司法警察官或司法警察執行扣押者，應於交與之搜索票內，記載其事由。
 
-* 137 司法警察或司法警察官行搜索或扣押時，發見本案應扣押之物為搜索票所未記載者，亦得扣押之。
+> 釋：法院組織法已設置檢察事務官，故配合增列之，執行扣押、搜索工作。
+
+* 137 檢察官、檢察事務官、司法警察官或司法警察執行搜索或扣押時，發現本案應扣押之物為搜索票所未記載者，亦得扣押之。第一百三十一條第三項之規定，於前項情形準用之。
+
+> 釋：一、第一項配合第一百二十八條之二第一項之修正而配合修正。二、執行搜索或扣押時，發現為搜索票所未記載之物而予扣押者，就該物品而言，與無搜索票而搜索之情形無異，仍應讓簽發搜索票之法院知悉，爰明定準用第一百三十一條第三項規定。
 
 * 138 應扣押物之所有人、持有人或保管人無正當理由拒絕提出或交付或抗拒扣押者，得用強制力扣押之。
 
@@ -392,11 +424,17 @@
 
 * 142 扣押物若無留存之必要者，不待案件終結，應以法院之裁定或檢察官命令發還之；其係贓物而無第三人主張權利者，應發還被害人。扣押物因所有人、持有人或保管人之請求，得命其負保管之責，暫行發還。
 
-* 143 所有人、持有人或保管人任意提出或交付之物經留存者，準用前四條之規定。
+* 143 被告、犯罪嫌疑人或第三人遺留在犯罪現場之物，或所有人、持有人或保管人任意提出或交付之物，經留存者，準用前四條之規定。
 
-* 144 因搜索及扣押得開啟鎖扃、封緘或為其他必要之處分。
+> 釋：本條於有關留存物準用前四條之規定，增列被告、犯罪嫌疑人或第三人遺留在犯罪現場之物。
 
-* 145 司法警察或司法警察官執行搜索及扣押，應以搜索票示第一百四十八條在場之人。
+* 144 因搜索及扣押得開啟鎖扃、封緘或為其他必要之處分。執行扣押或搜索時，得封鎖現場，禁止在場人員離去，或禁止前條所定之被告、犯罪嫌疑人或第三人以外之人進入該處所。對於違反前項禁止命令者，得命其離開或交由適當之人看守至執行終了。
+
+> 釋：為確保執行扣押或搜索之順利執行，本條增列第三項，凡對於違反本條第二項規定者，得命其離開或交由適當之人看守至執行終了。
+
+* 145 法官、檢察官、檢察事務官、司法警察官或司法警察執行搜索及扣押，除依法得不用搜索票之情形外，應以搜索票示第一百四十八條在場之人。
+
+> 釋：一、原條文漏未慮及無令狀搜索之情形，爰增訂之，以杜絕爭議。二、增列此一規定，亦為實現告知義務之具體表現。
 
 * 146 有人住居或看守之住宅或其他處所，不得於夜間入內搜索或扣押。但經住居人、看守人或可為其代表之人承諾或有急迫之情形者，不在此限。於夜間搜索或扣押者，應記明其事由於筆錄。日間已開始搜索或扣押者，得繼續至夜間。第一百條之三第三項之規定，於夜間搜索或扣押準用之。
 
@@ -418,7 +456,9 @@
 
 * 152 實施搜索或扣押時，發見另案應扣押之物亦得扣押之，分別送交該管法院或檢察官。
 
-* 153 搜索或扣押，得由審判長或檢察官囑託應行搜索、扣押地之推事或檢察官行之。受託推事或檢察官發現應在他地行搜索、扣押者，該推事或檢察官得轉囑託該地之推事或檢察官。
+* 153 搜索或扣押，得由審判長或檢察官囑託應行搜索、扣押地之法官或檢察官行之。受託法官或檢察官發現應在他地行搜索、扣押者，該法官或檢察官得轉囑託該地之法官或檢察官。
+
+> 釋：配合法院組織法之用語，將「推事」修正為「法官」。
 
 * 154 犯罪事實應依證據認定之，無證據不得推定其犯罪事實。
 
@@ -570,19 +610,21 @@
 
 * 227 裁判制作裁判書者，除有特別規定外，應以正本送達於當事人、代理人、辯護人及其他受裁判之人。前項送達，自接受裁判原本之日起，至遲不得逾七日。
 
-* 228 檢察官因告訴、告發、自首或其他情事知有犯罪嫌疑者，應即開始偵查。實施偵查非有必要，不得先行傳訊被告。被告經傳喚、自首或自行到場者，檢察官於訊問後認有第一百零一條第一項各款或第一百零一條之一第一項各款所定情形之一而無聲請羈押之必要者，得命具保、責付或限制住居。但認有羈押之必要者，得予逮捕，並將逮捕所依據之事實告知被告後，聲請法院羈押之。第九十三條第二項、第三項、第五項之規定於本項之情形準用之。
+* 228 檢察官因告訴、告發、自首或其他情事知有犯罪嫌疑者，應即開始偵查。前項偵查，檢察官得限期命檢察事務官、第二百三十條之司法警察官或第二百三十一條之司法警察調查犯罪情形及蒐集證據，並提出報告。必要時，得將相關卷證一併發交。實施偵查非有必要，不得先行傳訊被告。被告經傳喚、自首或自行到場者，檢察官於訊問後，認有第一百零一條第一項各款或第一百零一條之一第一項各款所定情形之一而無聲請羈押之必要者，得命具保、責付或限制住居。但認有羈押之必要者，得予逮捕，並將逮捕所依據之事實告知被告後，聲請法院羈押之。第九十三條第二項、第三項、第五項之規定於本項之情形準用之。
 
-> 釋：一、第一項及第二項均不修正。二、規定被告經傳喚、自首或自行到場者，檢察官在特定情況下亦得聲請法院羈押。
+> 釋：使羈押之被告能得到兩次之法院「司法審查」之機會，以貫徹「拘提逮捕前置主義」。
 
 * 229 左列各員，於其管轄區域內為司法警察官，有協助檢察官偵查犯罪之職權：一、警政署署長、警政廳廳長、警察局局長或警察總隊總隊長。二、憲兵隊長官。前項司法警察官，應將偵查之結果，移送該管檢察官；如接受被拘提或逮捕之犯罪嫌疑人，除有特別規定外，應解送該管檢察官。但檢察官命其解送者，應即解送。被告或犯罪嫌疑人未經拘提或逮捕者，不得解送。
 
 > 釋：一、第一項部分：（一）縣（市）長兼理司法之方式，已為民主法治國家所不取，爰將本項第一款刪除。（二）第二款改列為第一款，並配合現制及參照調度司法警察條例第二條第二款，將原規定修正為「警政署署長」、「警政廳廳長」、「警察局局長」，另增列「警察總隊總隊長」為司法警察官。（三）第三款改列為第二款。二、依司法院釋字第三九二號解釋意旨，憲法第八條第二項之二十四小時，檢警應同受約束，爰將「應於二十四小時內移送該管檢察官」修正為「應解送該管檢察官」；另因有第九十二條第二項但書之增訂，增列「除有特別規定外」字樣，以資配合。三、為保障人權，對非現行犯、通緝犯或拘提到案之人犯，規定不得解送檢察官處理，爰增列第三項。
 
-* 230 左列各員為司法警察官，應受檢察官之指揮，偵查犯罪：一、警察官長。二、憲兵隊官長、士官。三、依法令關於特定事項，得行司法警察官之職權者。前項司法警察官知有犯罪嫌疑者，應報告前條之該管檢察官或司法警察官。但得不待其指揮，逕行調查犯罪嫌疑人犯罪情形及蒐集證據。
+* 230 下列各員為司法警察官，應受檢察官之指揮，偵查犯罪：一、警察官長。二、憲兵隊官長、士官。三、依法令關於特定事項，得行司法警察官之職權者。前項司法警察官知有犯罪嫌疑者，應即開始調查，並將調查之情形報告該管檢察官及前條之司法警察官。實施前項調查有必要時，得封鎖犯罪現場，並為即時之勘察。
 
-> 釋：一、第一項第二款「憲兵官長、士官」修正為「憲兵隊官長、士官」。餘均未予修正。二、第二項係配合第一項修正意旨酌作文字修正。
+> 釋：一、第二項酌作修正。二、增訂第三項。實施調查有必要時，得封鎖犯罪現場，並為即時之勘察。
 
-* 231 左列各員為司法警察，應受檢察官及司法警察官之命令，偵查犯罪：一、警察。二、憲兵。三、依法令關於特定事項，得行司法警察之職權者。司法警察知有犯罪嫌疑者，應報告該管檢察官或司法警察官。但得不待其命令，逕行調查犯罪嫌疑人犯罪情形及蒐集證據。
+* 231 下列各員為司法警察，應受檢察官及司法警察官之命令，偵查犯罪：一、警察。二、憲兵。三、依法令關於特定事項，得行司法警察之職權者。司法警察知有犯罪嫌疑者，應即開始調查，並將調查之情形報告該管檢察官及司法警察官。實施前項調查有必要時，得封鎖犯罪現場，並為即時之勘察。
+
+> 釋：一、第二項酌作修正。二、增訂第三項。實施調查有必要時，得封鎖犯罪現場，並為即時之勘察。
 
 * 231.1 檢察官對於司法警察官或司法警察移送或報告之案件，認為調查未完備者，得將卷證發回，命其補足，或發交其他司法警察官或司法警察調查。司法警察官或司法警察應於補足或調查後，再行移送或報告。對於前項之補足或調查，檢察官得限定時間。
 
@@ -968,7 +1010,9 @@
 
 * 403 當事人對於法院之裁定有不服者，除有特別規定外，得抗告於直接上級法院。證人、鑑定人、通譯及其他非當事人受裁定者，亦得抗告。
 
-* 404 對於判決前關於管轄或訴訟程序之裁定，不得抗告。但左列裁定，不在此限：一、有得抗告之明文規定者。二、關於羈押、具保、責付、扣押或扣押物發還及因鑑定將被告送入醫院或其他處所之裁定。
+* 404 對於判決前關於管轄或訴訟程序之裁定，不得抗告。但下列裁定，不在此限：一、有得抗告之明文規定者。二、關於羈押、具保、責付、限制住居、搜索、扣押或扣押物發還、因鑑定將被告送入醫院或其他處所之裁定及依第一百零五條第三項、第四項所為之禁止或扣押之裁定。
+
+> 釋：配合刑事訴訟法第四百十六條第一項第一款之修正，將法院所為之搜索、限制住居（限制出境）、對在押被告之禁止接見通信等裁定，亦納入本條得提起抗告之範圍，予受處分或受裁定人法律上救濟之機會。
 
 * 405 不得上訴於第三審法院之案件，其第二審法院所為裁定，不得抗告。
 
@@ -992,7 +1036,9 @@
 
 * 415 對於抗告法院之裁定，不得再行抗告。但對於其就左列抗告所為之裁定，得提起再抗告：一、對於駁回上訴之裁定抗告者。二、對於因上訴逾期聲請回復原狀之裁定抗告者。三、對於聲請再審之裁定抗告者。四、對於第四百七十七條定刑之裁定抗告者。五、對於第四百八十六條聲明疑義或異議之裁定抗告者。六、證人、鑑定人、通譯及其他非當事人對於所受之裁定抗告者。前項但書之規定，於依第四百零五條不得抗告之裁定，不適用之。
 
-* 416 對於審判長、受命推事、受託推事或檢察官所為左列之處分有不服者，得聲請其所屬法院撤銷或變更之：一、關於羈押、具保、責付、扣押或扣押物發還及因鑑定將被告送入醫院或其他處所之處分。二、對於證人、鑑定人或通譯科罰鍰之處分。前項聲請期間為五日，自為處分之日起算，其為送達者，自送達後起算。第四百零九條至第四百十四條之規定，於本條準用之。第二十一條第一項之規定，於聲請撤銷或變更受託推事之裁定者準用之。
+* 416 對於審判長、受命法官、受託法官或檢察官所為下列處分有不服者，受處分人得聲請所屬法院撤銷或變更之：一、關於羈押、具保、責付、限制住居、搜索、扣押或扣押物發還、因鑑定將被告送入醫院或其他處所之處分及第一百零五條第三項、第四項所為之禁止或扣押之處分。二、關於證人、鑑定人或通譯科罰鍰之處分。前項之搜索、扣押經撤銷者，審判時法院得宣告所扣得之物，不得作為證據。第一項聲請期間為五日，自為處分之日起算，其為送達者，自送達後起算。第四百零九條至第四百十四條之規定，於本條準用之。第二十一條第一項之規定，於聲請撤銷或變更受託法官之裁定者準用之。
+
+> 釋：一、於原條文第一項明訂得對審判長、受命法官、受託法官或檢察官之處分聲明不服者為處分之相對人。另為落實人權保障，於本項第一款增訂限制住居及搜索均得為聲明不服之對象。二、於原條文第二項增訂搜索扣押經撤銷者，審判中審理本案之法院，得依情形宣告所扣得之物，不得作為證據。
 
 * 417 前條聲請應以書狀敘述不服之理由，提出於該管法院為之。
 
