法院組織法 2001.1.4

--- a/司法-司法組織/法院組織法.md
+++ b/司法-司法組織/法院組織法.md
@@ -30,7 +30,9 @@
 
 * 14 地方法院分設民事庭、刑事庭，其庭數視事務之繁簡定之；必要時得設專業法庭。
 
-* 15 民事庭、刑事庭、專業法庭及簡易庭之庭長，除由兼任院長之法官兼任者外，餘由其他法官兼任，簡任第十職等至第十一職等或薦任第九職等，監督各該庭事務。曾任高等法院或其分院法官四年以上，具有簡任資格，調地方法院或其分院兼任院長或庭長之法官、法官者，簡任第十二職等至第十四職等。
+* 15 民事庭、刑事庭、專業法庭及簡易庭之庭長，除由兼任院長之法官兼任者外，餘由其他法官兼任，簡任第十職等至第十一職等或薦任第九職等，監督各該庭事務。曾任高等法院或其分院法官二年以上，調地方法院或其分院兼任院長或庭長之法官、法官者，得晉敘至簡任第十二職等至第十四職等。
+
+> 釋：一、第一項不修正。二、為使富有第二審辦案經驗之優秀法官，樂於回任第一審法官或兼任庭長、院長，俾發揮事實審之功能，爰修正第二項，將曾任高等法院或其分院法官四年以上，修正為二年以上，以縮短職期，妥速建構完善之訴訟制度。
 
 * 16 地方法院設民事執行處，由法官辦理其事務，其法官在二人以上者，由一人兼任庭長，簡任第十職等至第十一職等或薦任第九職等，監督該處事務。
 
@@ -70,9 +72,9 @@
 
 > 釋：本條文未修正，配合第三十四條條文之修正，修正本條第一項附表相關員額。
 
-* 34 高等法院置法官，簡任第十職等至第十一職等或薦任第九職等。高等法院簡任法官，繼續服務四年以上者，簡任第十二職等至第十四職等。司法院得調地方法院試署或候補法官至高等法院辦事，承法官之命，辦理訴訟案件程序及實體之審查、法律問題之分析、資料之蒐集、裁判書之草擬等事務。高等法院於必要時得置法官助理，依聘用人員聘用條例聘用各種專業人員充任之；承法官之命，辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集等事務。試署法官或候補法官調高等法院辦事期間，計入其試署或候補法官年資。具律師執業資格者經聘用充任法官助理期間，計入其律師執業年資。
+* 34 高等法院置法官，簡任第十職等至第十一職等或薦任第九職等。高等法院法官，繼續服務二年以上，得晉敘至簡任第十二職等至第十四職等。司法院得調地方法院試署或候補法官至高等法院辦事，承法官之命，辦理訴訟案件程序及實體之審查、法律問題之分析、資料之蒐集、裁判書之草擬等事務。高等法院於必要時得置法官助理，依聘用人員聘用條例聘用各種專業人員充任之；承法官之命，辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集等事務。試署法官或候補法官調高等法院辦事期間，計入其試署或候補法官年資。具律師執業資格者經聘用充任法官助理期間，計入其律師執業年資。
 
-> 釋：一、第一、二項不修正。二、為提高裁判品質、增進司法效能、並減輕高等法院法官工作負荷，有設助理之必要，故明定於必要時，得聘用各種專業人員充任法官助理。三、試署法官或候補法官充任助理期間之年資應不受影響，故增訂之。四、法官助理之工作與律師所執行之業務，均屬司法實務工作，故增設具律師執業資格者充任法官助理期間計入其律師執業年資。
+> 釋：一、第一項、第三項至第六項不修正。二、為配合法院組織法第十五條第二項之修正，以曾任高等法院或其分院法官、或兼任庭長、院長者，其職等得晉敘簡任第十二職等至第十四職等，則繼續服務高等法院或其分院之法官，亦應比照調整為「繼續服務二年以上」，俾使第一、二審法官職期職等一致。
 
 * 35 高等法院置院長一人，由法官兼任，簡任第十三職等至第十四職等，綜理全院行政事務。
 
@@ -236,13 +238,17 @@
 
 * 102 裁判之評議，以審判長為主席。
 
-* 103 裁判之評議，均不公開。
+* 103 裁判之評議，於裁判確定前均不公開。
+
+> 釋：為配合法院組織法第一百零六條修正裁判確定後，訴訟案件關係人得聲請閱覽評議簿內之評議意見，爰修正為評議裁判確定前，應嚴守秘密。
 
 * 104 評議時法官應各陳述意見，其次序以資淺者為先，資同以年少者為先，遞至審判長為終。
 
 * 105 評議以過半數之意見決定之。關於數額，如法官之意見分三說以上，各不達過半數時，以最多額之意見順次算入次多額之意見，至達過半數為止。關於刑事，如法官之意見分三說以上，各不達過半數時，以最不利於被告之意見順次算入次不利於被告之意見，至達過半數為止。
 
-* 106 評議時各法官之意見應記載於評議簿，並於該案確定判決後，三年內應嚴守秘密。
+* 106 評議時各法官之意見應記載於評議簿，並應於該案裁判確定前嚴守秘密。案件之當事人、訴訟代理人、辯護人或曾為輔佐人，得於裁判確定後聲請閱覽評議意見。但不得抄錄、攝影或影印。
+
+> 釋：為落實合議制度，發揮評議功能，提升人民對司法的信賴，增訂第二項，使案件當事人、訴訟代理人、辯護人或曾為輔佐人，得於判決確定後聲請閱覽評議意見，但不得抄錄、攝影或影印。
 
 * 107 法院處理事務，應互相協助。
 
