中華民國刑法 2001.1.4

--- a/司法-刑事/中華民國刑法.md
+++ b/司法-刑事/中華民國刑法.md
@@ -80,7 +80,9 @@
 
 * 40 沒收於裁判時併宣告之。但違禁物得單獨宣告沒收。
 
-* 41 犯最重本刑為三年以下有期徒刑以下之刑之罪，而受六月以下有期徒刑或拘役之宣告，因身體、教育、職業或家庭之關係，執行顯有困難者，得以一元以上、三元以下折算一日，易科罰金。
+* 41 犯最重本刑為五年以下有期徒刑以下之刑之罪，而受六個月以下有期徒刑或拘役之宣告，因身體、教育、職業、家庭之關係或其他正當事由，執行顯有困難者，得以一元以上三元以下折算一日，易科罰金。但確因不執行所宣告之刑，難收矯正之效，或難以維持法秩序者，不在此限。併合處罰之數罪，均有前項情形，其應執行之刑逾六月者，亦同。
+
+> 釋：一、本條易科罰金之規定即含對於短期刑期改以他種方式代替之精神，一則避免受刑人於獄中感染惡習再度危害社會、二則可疏解當前獄滿為患之困境。二、原條文以最重本刑三年為限，放寬為五年，因為眾多最重本刑五年之罪如背信、侵占、詐欺等，在當今日新月異工商社會中，誤觸法網者眾；基於刑法「從新從輕」主義，目前罪刑確定尚未執行者，罪刑確定正在執行者均適用之。
 
 * 42 罰金應於裁判確定後兩個月內完納。期滿而不完納者，強制執行。其無力完納者，易服勞役。易服勞役，以一元以上、三元以下折算一日。但勞役期限不得逾六個月。罰金總額折算逾六個月之日數者，以罰金總額與六個月之日數比例折算。科罰金之裁判，應依前二項之規定，載明折算一日之額數。易服勞役不滿一日之零數，不算。易服勞役期內納罰金者，以所納之數，依裁判所定之標準折算，扣除勞役之日期。
 
